--- a/www/css/page2.css
+++ b/www/css/page2.css
@@ -91,26 +91,26 @@ h1 {
 }
 .n{
 	color: black;
-    font-size: 2em;
-    text-indent: 150px;
+    font-size: 1em;
+    text-indent: 2em;
     animation:fade 2000ms infinite;
     -webkit-animation:fade 2000ms infinite;
 }
 p{
 	background-color: black;
-	text-indent: 40px;
+	text-indent: 1em;
 	text-transform: uppercase;
-	font-size: 25px;
+	font-size: 1em;
 	color: red;
 
 }
 div{
 	background-color: black;
-	text-indent: 2em;
-	font-size: 20px;
+	text-indent: .5em;
+	font-size: .5em;
 	color: white;
 }
 img{
-	width: 500px;
+	width: 50%;
     height: auto;
 }
