--- a/www/css/index.css
+++ b/www/css/index.css
@@ -48,7 +48,7 @@ body.bg1{
     background-image: url(../img/Background1.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
 }
 .bg2{
     background: url(../img/Background2.jpg) no-repeat fixed center top;
@@ -127,7 +127,7 @@ h1 {
     font-family: Times New Roman;
     text-decoration-line: none;
     color: orange;
-    font-size: 1em;
+    font-size: 1.5em;
 }
 .line1{
     font-family: Times New Roman;
