--- a/www/css/index.css
+++ b/www/css/index.css
@@ -137,8 +137,8 @@ h1 {
     animation:fade 2000ms infinite;
     -webkit-animation:fade 2000ms infinite;
 }
-.img{
-    width: 20%
-    height:20%;
+img{
+    width: 80px;
+    height: auto;
 }
 .ripple, a.link, a.item-link, .button, .modal-button, .tab-link, .label-radio, .label-checkbox, .actions-modal-button, a.searchbar-clear, .floating-button
