--- a/www/css/index.css
+++ b/www/css/index.css
@@ -45,7 +45,7 @@ body {
     width:100%;
 }
 body.bg1{
-    background: url(../img/Background1.jpg) no-repeat fixed center center;
+    background: url(../img/Background1.jpg) no-repeat fixed center top;
     background-size: cover;
 }
 .bg2{
@@ -125,20 +125,22 @@ h1 {
     font-family: Times New Roman;
     text-decoration-line: none;
     color: orange;
-    position: top: 40%;
+    text-indent: 35%;
+    position: top:45%;
     font-size: 2em;
 }
 .line1{
     font-family: Times New Roman;
-    color: grey;
-    font-size: 1em;
+    color: rgb(216,201,14);
+    font-size: 2em;
+    text-indent: 35%;
     position: fixed;
-    text-indent: 10%;
-    animation:fade 2000ms infinite;
-    -webkit-animation:fade 2000ms infinite;
+    animation:fade 1000ms infinite;
+    -webkit-animation:fade 1000ms infinite;
 }
 img{
-    width: 80px;
+    width: 60%;
     height:auto;
 }
 .ripple, a.link, a.item-link, .button, .modal-button, .tab-link, .label-radio, .label-checkbox, .actions-modal-button, a.searchbar-clear, .floating-button
+
