not yet the final commit (11/30/17)

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -128,6 +128,7 @@ h1 {
     text-indent: 35%;
     position: top:45%;
     font-size: 2em;
+    text-decoration-style: solid;
 }
 .line1{
     font-family: Times New Roman;
