--- a/www/css/index.css
+++ b/www/css/index.css
@@ -128,6 +128,7 @@ h1 {
     text-indent: 35%;
     position: top:45%;
     font-size: 2em;
+    margin-right: 35%;
     text-decoration-style: solid;
 }
 .line1{
