--- a/www/css/page2.css
+++ b/www/css/page2.css
@@ -96,7 +96,7 @@ h1 {
     animation:fade 2000ms infinite;
     -webkit-animation:fade 2000ms infinite;
 }
-p{
+.p{
 	background-color: black;
 	text-indent: 1em;
 	text-transform: uppercase;
@@ -104,13 +104,13 @@ p{
 	color: red;
 
 }
-div{
+.div{
 	background-color: black;
 	text-indent: .5em;
 	font-size: 1em;
 	color: white;
 }
-img{
+.img{
 	width: 80%;
     height: auto;
 }
